--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -1,15 +1,15 @@
 ﻿@inherits MasaCompontentBase
 
 <SheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
-    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
-        <div>
+    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
+        <div class="full-height" style="overflow: auto;">
             <div class="text-h6 d-flex align-center">
                 @AppDetail.Name
                 <span class="ml-3 text-caption">|</span>
                 <sapn class="ml-2 text-caption">@AppDetail.Identity</sapn>
             </div>
-            <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">需要关联的集群</p>
-            <MChipGroup Multiple Column @bind-Values="_selectEnvClusterIds">
+            <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">@T("Need associated cluster")</p>
+            <MChipGroup Multiple Column @bind-Values="_selectToEnvClusterIds">
                 @foreach (var item in AppDetail.EnvironmentClusters)
                 {
                     <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6" Filter Outlined ActiveClass="@($"{item.EnvironmentColor}")">
@@ -18,26 +18,46 @@
                     </MChip>
                 }
             </MChipGroup>
-            <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">选择公共配置对象</p>
-            <MSelect Value="_selectPublicConfigObjectId"
-                     ValueChanged="SelectConfigObjectValueChanged"
-                     Style="width: 50%;"
-                     TValue="int"
-                     TItemValue="int"
-                     TItem="ConfigObjectDto"
-                     Label="项目"
-                     MenuProps="props => props.OffsetY = true"
-                     Outlined
-                     Dense
-                     Items="_publicConfigObjects"
-                     ItemText="l=>l.Name"
-                     ItemValue="l=>l.Id">
-            </MSelect>
+            <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">@T("Select public config object")</p>
+            <MRow NoGutters>
+                <MCol>
+                    <MSelect Value="_selectFromEnvClusterId"
+                             ValueChanged="SelectEnvClusterValueChanged"
+                             Class="pr-3"
+                             TValue="int"
+                             TItemValue="int"
+                             TItem="EnvironmentClusterModel"
+                             Label="@T("Environment cluster")"
+                             MenuProps="props => props.OffsetY = true"
+                             Outlined
+                             Dense
+                             Items="_allEnvClusters"
+                             ItemText="l=>l.EnvironmentClusterName"
+                             ItemValue="l=>l.Id">
+                    </MSelect>
+                </MCol>
+                <MCol>
+                    <MSelect Value="_selectPublicConfigObjectId"
+                             ValueChanged="SelectConfigObjectValueChanged"
+                             Class="pl-3"
+                             TValue="int"
+                             TItemValue="int"
+                             TItem="ConfigObjectDto"
+                             Label="@T("Public config object")"
+                             MenuProps="props => props.OffsetY = true"
+                             Outlined
+                             Dense
+                             Items="_publicConfigObjects"
+                             ItemText="l=>l.Name"
+                             ItemValue="l=>l.Id">
+                    </MSelect>
+                </MCol>
+            </MRow>
             @if (_selectConfigObject.FormatLabelCode.Trim().ToLower() == "properties")
             {
                 <div style="border-radius: 8px; border: 1px solid #E2E7F4; padding:12px 24px;">
                     <MRow Style="color: #A3AED0; font-size: 14px;" NoGutters>
-                        <span class="d-flex justify-center" style="width: 5%">状态</span>
+                        <span class="d-flex justify-center" style="width: 5%">@T("State")</span>
                         <span style="width: 47.5%">Key</span>
                         <span style="width: 47.5%">Value</span>
                     </MRow>
@@ -64,18 +84,18 @@
                 if (_isRelation)
                 {
                     <MIcon Size="18" Color="#7681AB">mdi-link-variant</MIcon>
-                    <span style="color: #7681AB; font-size: 14px;">已关联</span>
+                    <span style="color: #7681AB; font-size: 14px;">@T("Connected")</span>
                 }
                 else
                 {
                     <MIcon Size="18" Color="#7681AB">mdi-link-variant-off</MIcon>
-                    <span style="color: #7681AB; font-size: 14px;">已覆盖</span>
+                    <span style="color: #7681AB; font-size: 14px;">@T("Covered")</span>
                 }
                 <MTextarea Class="mt-3" Dense Outlined Value="@_selectConfigObject.Content" ValueChanged="value=>ContentValueChanged(value,_selectConfigObject)"></MTextarea>
             }
         </div>
-        <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
-            <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="HandleOnSubmitAsync">提交</MButton>
+        <div class="d-flex justify-end align-end" style="width:100%;">
+            <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</MButton>
         </div>
     </div>
 </SheetDialog>
