fix: fix relation config object release

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -1,6 +1,6 @@
 ﻿html {
     font-size: 16px;
-    font-family: Roboto,'Noto Sans SC';
+    font-family: Roboto,'Microsoft YaHei';
 }
 
 .m-application {
