--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
@@ -42,7 +42,7 @@
                                     <MListItem Class="rounded-2 env-list" Value="env.Id" Dense OnClick="@(()=>GetClustersByEnvIdAsync(env.Id))">
                                         <ItemContent>
                                             <MListItemIcon Class="d-flex align-center pt-1 mr-0">
-                                                <MIcon Color="@env.Color" Size="12">mdi-circle-slice-8</MIcon>
+                                                <MIcon Color="@env.Color" Size="12">mdi-circle</MIcon>
                                             </MListItemIcon>
                                             <MListItemContent>
                                                 <MListItemTitle>@env.Name</MListItemTitle>
@@ -56,21 +56,21 @@
                 </MNavigationDrawer>
                 <div class="pl-6" style="width: calc(100% - 242px); overflow: hidden; display:block;">
                     <MRow NoGutters Align="AlignTypes.Center" Class="env-toolbar rounded-5" Style="height:102px;background:#fff;padding:0 12px;">
-                        <MCard Style="padding-right: 150px;">
+                        <MCard>
                             <MTabs @bind-Value="_selectEnvClusterId" Class="cluster-tabs" BackgroundColor="#fff" ShowArrows="@(true)" ActiveClass="cluster-tab-active" HideSlider>
                                 @foreach (var cluster in _clusters)
                                 {
                                     StringNumber envClusterId = (StringNumber)cluster.EnvironmentClusterId;
-                                    <MTab Style="max-width:150px;" Value="envClusterId" OnClick="()=>GetProjectByEnvClusterIdAsync(cluster.EnvironmentClusterId)">
-                                        <MTooltip Top>
-                                            <ActivatorContent>
-                                                <div class="text-overflow" @attributes="@context.Attrs">@cluster.Name</div>
-                                            </ActivatorContent>
-                                            <ChildContent>
-                                                <span>@cluster.Name</span>
-                                            </ChildContent>
-                                        </MTooltip>
-                                    </MTab>
+                                    <MTooltip Top>
+                                        <ActivatorContent>
+                                            <MTab @attributes="@context.Attrs" Style="max-width:150px;" Value="envClusterId" OnClick="()=>GetProjectByEnvClusterIdAsync(cluster.EnvironmentClusterId)">
+                                                <div class="text-overflow">@cluster.Name</div>
+                                            </MTab>
+                                        </ActivatorContent>
+                                        <ChildContent>
+                                            <span>@cluster.Name</span>
+                                        </ChildContent>
+                                    </MTooltip>
                                 }
                             </MTabs>
                         </MCard>
@@ -81,7 +81,7 @@
                                 @foreach (var project in _projects)
                                 {
                                     var apps = _apps.Where(app => app.ProjectId == project.Id && app.EnvironmentClusters.Select(envCluster => envCluster.Id).Contains(_selectEnvClusterId.AsT1)).ToList();
-                                    <MExpansionPanel Style="margin-bottom: 12px; border-radius: 20px;">
+                                    <MExpansionPanel Style="border-radius: 20px;">
                                         <MExpansionPanelHeader>
                                             <span style="display:flex;align-items:center;margin-right:10px;">
                                                 <div class="text-h6" @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)">
@@ -151,11 +151,10 @@
                                                     }
                                                 }
                                             </MRow>
-                                            <div class="d-flex justify-space-between mt-3">
+                                            <div class="d-flex justify-start mt-3">
                                                 <div>
                                                     <img style="height:24px;width:24px" src="/img/avatar/9.svg">
                                                 </div>
-                                                <div class="text-caption">编辑于一小时前</div>
                                             </div>
                                         </MExpansionPanelContent>
                                     </MExpansionPanel>
