--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -2,11 +2,11 @@
 @inherits MasaCompontentBase;
 
 <div class="d-flex">
-    <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
-        <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto; height: calc(100vh - 218px);">
-            <div style="width:100%;" class="text-body2">
+    <MNavigationDrawer Right Permanent Class="rounded-4 py-6" Width="300" Style="height: calc(100vh - 180px);">
+        <div style="min-width:300px; padding:0 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
+            <div style="width:100%; overflow-x: hidden;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="text-h6">@_projectDetail.Name</div>
+                    <div class="text-h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
                 </MRow>
                 <MRow NoGutters Class="mt-6">
                     @T("AppCount")：@AppCount
@@ -17,8 +17,6 @@
                 <MRow NoGutters Class="mt-4">
                     @_projectDetail.Description
                 </MRow>
-                <MRow NoGutters Class="text-caption mt-6">@T("Creator")</MRow>
-                <MRow NoGutters Class="mt-4">@_projectDetail.Creator</MRow>
                 <MRow NoGutters Class="text-caption mt-6">@T("Participate team")</MRow>
                 <MRow NoGutters Class="mt-4">@_projectDetail.TeamId</MRow>
                 <MRow NoGutters Class="text-caption mt-6">@T("Environment/Cluster")</MRow>
@@ -32,13 +30,11 @@
                     }
                 </div>
             </div>
-            <MSpacer></MSpacer>
-            <div style="width:100%" class="text-caption d-flex justify-end mt-6">@_projectDetail.CreationTime.ToString(T("$DateTimeFormat"))</div>
         </div>
     </MNavigationDrawer>
     <div class="pl-6" style="width: calc(100% - 300px);">
         <div class="bizCard">
-            <h6>业务配置</h6>
+            <h6>@T("Business configuration")</h6>
             <MCard Class="mt-6" Height="163">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap;">
                     <div class="text-h7 text-overflow">
@@ -99,7 +95,7 @@
         </div>
         <div class="appCard mt-6">
             <div class="d-flex justify-space-between">
-                <h6>应用</h6>
+                <h6>@T("App")</h6>
                 <MTextField @bind-Value="_appName" OnKeyDown="SearchAppAsync" Style="max-width:300px;" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Please enter the app name and press enter to query")">
                     <PrependInnerContent>
                         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
@@ -112,7 +108,7 @@
                         foreach (var app in _apps)
                         {
                             <MCol Lg="4" Md="6" Sm="12">
-                                <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                <AppCard Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
                                     <MMenu Transition="slide-y-transition" Bottom>
                                         <ActivatorContent>
                                             <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
