--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -15,14 +15,14 @@
             <ChildContent>
                 <span class="mtab-tab-line @(_curTab.ToInt32()>0?"mtab-tab-linear-primary":"mtab-tab-linear-neutral")"></span>
                 <span class="rounded-circle mtab-tab-indicator @(_curTab.ToInt32()>0?"mtab-tab-indicator-primary":"mtab-tab-indicator-neutral")"></span>
-                <span class="mtab-tab-title">@T("App")</span>
+                <span class="mtab-tab-title">@T("Project detail")</span>
             </ChildContent>
         </MTab>
         <MTab class="text-capitalize pa-0" Disabled="_configDisabled">
             <ChildContent>
                 <span class="mtab-tab-line @(_curTab.ToInt32()>1?"mtab-tab-linear-primary":"mtab-tab-linear-neutral")"></span>
                 <span class="rounded-circle mtab-tab-indicator @(_curTab.ToInt32()>1?"mtab-tab-indicator-primary":"mtab-tab-indicator-neutral")"></span>
-                <span class="mtab-tab-title">@T("Config")</span>
+                <span class="mtab-tab-title">@T("Config detail")</span>
             </ChildContent>
         </MTab>
     </MTabs>
