chore: update masa packages and access auth and new layout

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -56,17 +56,17 @@
                                                             string backgroundColor;
                                                             switch (project.LabelName.ToLower())
                                                             {
-                                                                case "basic ability":
+                                                                case "basicability":
                                                                     backgroundColor = "#37D7AD";
                                                                     break;
-                                                                case "ops ability":
+                                                                case "operator":
                                                                     backgroundColor = "#FFB547";
                                                                     break;
-                                                                case "data factory":
+                                                                case "datafactory":
                                                                     backgroundColor = "#5FB9FF";
                                                                     break;
                                                                 default:
-                                                                    backgroundColor = "";
+                                                                    backgroundColor = "#BDBDBD";
                                                                     break;
                                                             }
                                                         }
