--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
@@ -1,5 +1,8 @@
-﻿<CascadingAuthenticationState>
-    <Microsoft.AspNetCore.Components.Routing.Router AppAssembly="@typeof(App).Assembly">
+﻿@using System.Reflection
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly" 
+            AdditionalAssemblies="additionalAssemblies">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -10,5 +13,16 @@
                 <p role="alert">Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
-    </Microsoft.AspNetCore.Components.Routing.Router>
+    </Router>
 </CascadingAuthenticationState>
+
+@code {
+
+    private List<Assembly> additionalAssemblies = new();
+
+    public App()
+    {
+        var masaStackComponentsAssembly = typeof(Masa.Stack.Components.UserCenter).Assembly;
+        additionalAssemblies.Add(masaStackComponentsAssembly);
+    }
+}
