--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -1,38 +1,15 @@
-﻿@using Microsoft.AspNetCore.Components.Rendering
-@inherits LayoutComponentBase
-@inject GlobalConfig GlobalConfig
-@implements IDisposable
+﻿@inherits LayoutComponentBase
 
-<MApp>
-    <MAppBar Elevation=0 App MaxHeight=60 Class="mx-6 rounded-b-4">
-        <MSpacer />
-        <MIcon Size=20 Class="ml-5" Color="neutral-lighten-3">mdi-message-processing-outline</MIcon>
-        <Language />
-        <Login />
-    </MAppBar>
-
-    <Navigation />
-
-    <MMain Class="fill-lighten-1" Style="padding-top:60px">
-        <MErrorHandler>
-            <div class="pa-6 max-width full-height">
-                @Body
-            </div>
-        </MErrorHandler>
-        <MLoading />
-        <MMessage />
-        <MConfirmDialog />
-    </MMain>
-</MApp>
+<Layout AppId="masa-dcc-web-admin"
+        OnSignOut="SignOut"
+        Logo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo-h-en.png"
+        MiniLogo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo.png">
+    @Body
+</Layout>
 
 @code {
-    protected override void OnInitialized()
+    private void SignOut()
     {
-        GlobalConfig.OnPageModeChanged += base.StateHasChanged;
-    }
 
-    public void Dispose()
-    {
-        GlobalConfig.OnPageModeChanged -= base.StateHasChanged;
     }
 }
