--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
@@ -30,7 +30,7 @@
     <MTabsItems Value="_curTab" class="pt-6">
         <MTabItem>
             <div class="d-flex">
-                <MNavigationDrawer Permanent Class="rounded-4" Width="242" Style="height:calc(100vh - 182px );">
+                <MNavigationDrawer Permanent Class="rounded-4" Width="242" Style="height:calc(100vh - 192px );">
                     <div style="min-width:242px; display:flex; flex-direction:column; align-items:center; overflow: auto; height:calc(100vh - 206px );">
                         <MList Width="194">
                             <MListItemGroup Class="rounded-2"
@@ -75,7 +75,7 @@
                             </MTabs>
                         </MCard>
                     </MRow>
-                    <div class="rounded-5 mt-6 py-2" style="height:calc(100vh - 306px );background:#fff;display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
+                    <div class="rounded-5 mt-6 py-2" style="height:calc(100vh - 318px );background:#fff;display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
                         <div>
                             <MExpansionPanels Flat Accordion>
                                 @foreach (var project in _projects)
@@ -91,19 +91,19 @@
                                                     <div class="text-caption d-flex" style="padding:0">
                                                         @{
                                                             string backgroundColor;
-                                                            switch (project.LabelName.ToLower())
+                                                            switch (project.LabelCode.ToLower())
                                                             {
-                                                                case "basic ability":
+                                                                case "basicability":
                                                                     backgroundColor = "#37D7AD";
                                                                     break;
-                                                                case "ops ability":
+                                                                case "operator":
                                                                     backgroundColor = "#FFB547";
                                                                     break;
-                                                                case "data factory":
+                                                                case "datafactory":
                                                                     backgroundColor = "#5FB9FF";
                                                                     break;
                                                                 default:
-                                                                    backgroundColor = "";
+                                                                    backgroundColor = "#BDBDBD";
                                                                     break;
                                                             }
                                                         }
