--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -54,19 +54,19 @@
                                                     <div class="text-caption d-flex" style="padding:0">
                                                         @{
                                                             string backgroundColor;
-                                                            switch (project.LabelName.ToLower())
+                                                            switch (project.LabelCode.ToLower())
                                                             {
-                                                                case "basic ability":
+                                                                case "basicability":
                                                                     backgroundColor = "#37D7AD";
                                                                     break;
-                                                                case "ops ability":
+                                                                case "operator":
                                                                     backgroundColor = "#FFB547";
                                                                     break;
-                                                                case "data factory":
+                                                                case "datafactory":
                                                                     backgroundColor = "#5FB9FF";
                                                                     break;
                                                                 default:
-                                                                    backgroundColor = "";
+                                                                    backgroundColor = "#BDBDBD";
                                                                     break;
                                                             }
                                                         }
