--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Pages/_Layout.cshtml
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Pages/_Layout.cshtml
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://cdn.masastack.com/stack/fonts/roboto/font-roboto.css">
     <link href="_content/Masa.Dcc.Web.Admin.Rcl/css/masa-dcc.css" rel="stylesheet" />
     <link href="_content/Masa.Stack.Components/css/app.css" rel="stylesheet">
+    <link href="Masa.Dcc.Web.Admin.Server.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
